部分修改，overshrow功能，兼容低端机

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
 	        <div class="fl calcTit">买房税费</div>
 	    </header>
 
-	    <div class="calcbuy" id="calcbuy">
+	    <div class="calcbuy overthrow" id="calcbuy">
 	        <form name="buyForm" class="buyForm">
 	            <!--合同价部分--borderbtrd-->
-	            <div class="calcline overthrow">
+	            <div class="calcline">
 	                <div class="blconner"></div>
 	                <div class="inputline clearfix row buyfirstline">
 	                    <div class="inputlinel fl">合同价</div>
@@ -225,7 +225,7 @@
 
 	    <!--结果页：&&resultShow -->
 	    <div class="resultcon">
-	        <div class="resultm">
+	        <div class="resultm overthrow">
 	            <div class="resultarea">
 	            <p class="unin">单位:万元</p>
 	            <p class="resultp clearfix lastprice">
@@ -286,7 +286,7 @@
 	        <div class="fl calcTit">卖房税费</div>
 	    </div>
 
-	    <div class="calcsell" id="calcsell">
+	    <div class="calcsell overthrow" id="calcsell">
 	        <!--换算方式：-->
 	        <form name="sellForm" id="sellForm" class="sellForm">
 	            <div class="inputlinetype clearfix row caltype" id="caltype">
@@ -301,7 +301,7 @@
 	            </div>
 
 	            <div class="calcwrap">
-	                <div class="calcline overthrow" id="calcline">
+	                <div class="calcline" id="calcline">
 	                    <!--合同价/到手价-->
 	                    <div class="blconner"></div>
 	                    <div class="inputline clearfix changetype sellfirstline row">
@@ -546,7 +546,7 @@
 	    </div>
 
 	    <div class="resultcon">
-	        <div class="resultm">
+	        <div class="resultm overthrow">
 	            <div class="resultarea">
 	            <p class="unin">单位:万元</p>
 	            <div>
@@ -604,8 +604,8 @@
 	        <div class="fl calcTit">帮助中心</div>
 	    </header>
 
-	    <div class="helpcon">
-	        <div class="helpm overthrow">
+	    <div class="helpcon overthrow">
+	        <div class="helpm">
 	            <div class="helpall">
 	                <div class="helptips">
 	                    <p>当前只可计算上海地区房产交易税费</p>
