解决note 注入问题及删除部分动画

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
 	                <!--买方国籍-->
 	                <div class="inputline clearfix buytab row row1 inputlinenone">
-	                    <div class="inputlinecon inputlinecon1 inputlinecontop">
+	                    <div class="inputlinecon">
 	                        <div class="inputlinel fl">买方国籍</div>
 	                        <div class="inputliner fr clearfix">
 	                            <!--开关按钮，模拟radio的check事件-->
@@ -175,7 +175,7 @@
 
 	                <!--已有住房面积部分 ng-show="existShow"-->
 	                <div class="inputline clearfix row row2 inputlinenone">
-	                    <div class="inputlinecon inputlinecon2 inputlinecontop">
+	                    <div class="inputlinecon inputlinecon2">
 	                        <div class="inputlinel fl">已有住房面积</div>
 	                        <div class="inputliner fr clearfix">
 	                            <div class="inputarea">
@@ -189,7 +189,7 @@
 
 	                <!--家庭人口部分 ng-show="existShow"-->
 	                <div class="inputline clearfix row row2 row3 inputlinenone">
-	                    <div class="inputlinecon inputlinecon3 inputlinecontop">                   
+	                    <div class="inputlinecon inputlinecon3">                   
 	                        <div class="inputlinel fl">家庭人口</div>
 	                        <div class="inputliner familynum fr clearfix">
 	                            <select ng-model="filter1.familyNum">
@@ -479,7 +479,7 @@
 
 	                    <!--个人所得税 ng-hide="noIndeedTax"-->
 	                    <div  class="inputline clearfix row row11 inputlinenone">
-	                        <div class="inputlinecon inputlinecon1 inputlinecontop">
+	                        <div class="inputlinecon inputlinecon1">
 	                            <div class="inputlinel fl">个人所得税</div>
 	                            <div class="inputliner fr clearfix">
 	                                <!--select事件-->
@@ -501,7 +501,7 @@
 	                    
 	                    <!--贷款利息  ng-show="profitShow&&(taxCalType==1)"-->
 	                    <div class="inputline clearfix row row22 inputlinenone">
-	                        <div class="inputlinecon inputlinecon2 inputlinecontop">
+	                        <div class="inputlinecon inputlinecon2">
 	                            <div class="inputlinel fl">贷款利息</div>
 	                            <div class="inputliner fr clearfix">
 	                                <div class="inputarea">
@@ -516,7 +516,7 @@
 
 	                    <!--装修成本-->
 	                    <div class="inputline clearfix row row22 inputlinenone">
-	                        <div class="inputlinecon inputlinecon3 inputlinecontop">
+	                        <div class="inputlinecon inputlinecon3">
 	                            <div class="inputlinel fl">装修成本</div>
 	                            <div class="inputliner fr clearfix">
 	                                <div class="inputarea">
